test/tests/compiler/15_arrays_and_pointer_arithmetic/valid/initialization/trailing_comma_initializer.plx
pub fn foo(a: i32, b: i32, c: i32) i32;
pub fn main(none) i32 {
    arr: [3]i32 = $(        1,         2,         3#  last element in a compound initializer may have a trailing comma
        )
    return arr[2]
}

