test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_parse/array_of_functions.plx
# This is a parse error in our implementation
# but could also be a type error
pub fn [3]foo(a: i32) i32;

